--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,31 @@
 body {
-	background-color: rgb(60, 60, 60);
+	
 }
 
 h1, p {
 	text-align: Center;
 	color: White;
+}
+
+/*Header*/
+.header{
+	text-align: Center;
+	padding: 20px;
+}
+/*NavBar*/
+.topnav{
+	overflow: hidden;
+	background-color: #333;
+}
+.topnav a{
+	float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+.topnav a:hover{
+	background-color: #ddd;
+	color: black;
 }
