--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,9 @@
+/*ALL SECTION*/
+html{
+	background-color: darkgrey;
+	font-family: 'Monda', sans-serif;
+	font-size: 14px;
+}
 /*Header*/
 .header{
 	text-align: Center;
@@ -21,7 +27,17 @@
 	color: black;
 }
 /*Footer*/
-.footer{
+footer{
 	text-align: center;
-	padding; 10px;
+	padding: 10px;
+	font-size: 12px;
+}
+/*Extras*/
+.redstatus{
+	color: red;
+	font-style: italic;
+}
+.yellowstatus{
+	color: yellow;
+	font-style: italic;
 }
