--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -56,6 +56,7 @@ img {
 	background-color: var(--bgColor);
 	text-align: center;
 	border-radius: 10px;
+	animation: fadeintop 1s ease;
 }
 
 .content p {
@@ -126,6 +127,7 @@ footer {
 	background-color: var(--bgColor);
 	text-align: center;
 	border-radius: 10px;
+	animation: fadeintop 1s ease;
 }
 
 footer a {
@@ -135,4 +137,21 @@ footer a {
 
 footer a:hover {
 	text-decoration: underline;
+}
+
+/*Animation Keyframes*/
+@keyframes fadein{
+	from { opacity: 0;}
+	to { opacity: 1; }
+}
+
+@keyframes fadeintop{
+	0% {
+		opacity: 0;
+		transform: translateY(-20px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0px);
+	}
 }
